[package]
name = "totally-sound-ptr-int-cast"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"
description = "do i _look_ like a memory model?"
repository = "https://github.com/ben0x539/totally-sound-ptr-int-cast"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.121"
